--- a/index.html
+++ b/index.html
@@ -9,7 +9,31 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
     <style>
-        /* =============== Mobile-first base =============== */
+        /* =========================
+           LIGHT THEME ONLY
+           ========================= */
+        html { color-scheme: light; }               /* prevent auto-darkening on mobile */
+
+        /* =========================
+           TOKENS
+           ========================= */
+        :root{
+          --brand-lime:#c7e21c;
+          --ink:#0f0f0f;
+          --muted:#707070;
+          --surface:#ffffff;
+          --surface-2:#f5f7f8;
+          --border:rgba(0,0,0,.10);
+          --radius:14px;
+          --tap:48px;
+
+          /* header height (adjust if you resize the logo) */
+          --brandbar-h:72px;
+        }
+
+        /* =========================
+           BASE
+           ========================= */
         *, *::before, *::after { box-sizing: border-box; }
         html, body { height: 100%; }
         body{
@@ -18,29 +42,12 @@
           -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
           background:var(--brand-lime);
           color:var(--ink);
-          padding-top: var(--brandbar-h); /* space for fixed header */
+
+          /* space for the fixed header (search bar is inside the card and sticks) */
+          padding-top: var(--brandbar-h);
         }
         img{ max-width:100%; height:auto; display:block; }
-        button, input{ font: inherit; }
-
-        /* =============== Theme tokens =============== */
-        :root{
-          --brand-lime:#c7e21c;
-          --brand-black:#111111;
-          --ink:#0f0f0f;
-          --muted:#707070;
-          --surface:#ffffff;
-          --surface-2:#f5f7f8;
-          --border:rgba(0,0,0,.10);
-          --accent:#0a7cff;            /* kept for consistency */
-          --radius:14px;
-          --tap:48px;
-          --shadow-1:0 6px 18px rgba(0,0,0,.12);
-          --shadow-2:0 1px 0 rgba(0,0,0,.08);
-          --brandbar-h:72px;           /* taller header for centered logo */
-        }
-
-        /* =============== A11y helpers =============== */
+        button, input{ font:inherit; }
         .sr-only{
           position:absolute!important; width:1px; height:1px; padding:0; margin:-1px;
           overflow:hidden; clip:rect(0,0,0,0); white-space:nowrap; border:0;
@@ -50,37 +57,42 @@
           *{ animation-duration:.001ms!important; animation-iteration-count:1!important; transition-duration:.001ms!important; }
         }
 
-        /* =============== Fixed brand header =============== */
+        /* =========================
+           FIXED BRAND HEADER (WHITE)
+           ========================= */
         .brandbar{
           position:fixed; top:0; left:0; right:0; z-index:9999;
-          min-height:var(--brandbar-h);
+          height:var(--brandbar-h);
           padding: calc(12px + env(safe-area-inset-top, 0px)) 16px 12px;
-          background:var(--brand-black); /* or use var(--brand-lime) for lime header */
-          color:#fff;
-          box-shadow:0 2px 0 rgba(0,0,0,.2);
+          background:#fff;                          /* ← WHITE header */
+          color:#111;
+          box-shadow:0 1px 0 rgba(0,0,0,.08);       /* subtle divider */
+          display:flex; align-items:center; justify-content:center;
         }
         .brandbar__inner{
-          max-width:100%; margin:0;
+          height:100%; width:100%;
           display:flex; align-items:center; justify-content:center;
-          min-height:var(--brandbar-h);
-
         }
         .brandbar__logo{ display:inline-flex; align-items:center; line-height:0; }
-        .brandbar__logo img{ height:70px; width:auto; display:block; } /* 36–48px looks great */
+        .brandbar__logo img{ height:64px; width:auto; display:block; } /* try 56–72px */
 
-        /* =============== App container card =============== */
+        /* =========================
+           APP SHELL
+           ========================= */
         .appwrap{ max-width:640px; margin:10px auto 22px; padding:12px; }
         .appcard{
           background:var(--surface);
           border-radius:16px;
-          box-shadow:var(--shadow-1);
+          box-shadow:0 6px 18px rgba(0,0,0,.12);
           padding:12px;
         }
 
-        /* =============== Search (IDs must remain) =============== */
+        /* =========================
+           SEARCH (IDs must remain)
+           ========================= */
         .bar{
           position:sticky;
-          top: var(--brandbar-h);     /* stick under header */
+          top: var(--brandbar-h);   /* sticks under the fixed header */
           z-index:40;
           background:transparent;
           padding-top:2px;
@@ -89,88 +101,109 @@
           display:grid; grid-template-columns:1fr auto; gap:8px; align-items:center;
         }
 
-        /* Clean pill input (no inner icon) */
+        /* pill input */
         #query{
           width:100%;
-          height:52px;                /* comfy mobile size */
-          border-radius:999px;        /* pill */
+          height:52px;
+          border-radius:999px;
           border:1.5px solid var(--border);
           background:#fff;
-          padding:0 14px;             /* normal padding (no icon inside) */
+          padding:0 14px;
           font-size:16px; line-height:1;
           outline:none;
           box-shadow:0 2px 8px rgba(0,0,0,.06);
-          background-image:none!important;
         }
-        #query:focus{ border-color:rgba(0,0,0,.24); background:#fff; }
+        #query:focus{ border-color:rgba(0,0,0,.24); }
 
-        /* Icon-only button NEXT TO the input (clickable) */
+        /* icon-only button next to input (white) */
         #btn{
-          position: static !important;      /* not overlaying the input */
-          width:44px; height:44px;          /* ergonomic tap target */
-          padding:0;
+          width:44px; height:44px;
           border-radius:999px;
-          border:0;
-          background:#111; color:#c7e21c;      /* FreshCo black; swap to #c7e21c & color:#111 for lime */
+          border:1.5px solid var(--border);
+          background:#fff; color:#111;
           display:inline-flex; align-items:center; justify-content:center;
-          font-size:0;                      /* hide "Search" text */
-          box-shadow:0 2px 8px rgba(0,0,0,.12);
+          cursor:pointer;
+          box-shadow:0 2px 8px rgba(0,0,0,.06);
           -webkit-tap-highlight-color:transparent;
+          font-size:0;                         /* hide button text if any */
         }
         #btn::before{ content:"🔎"; font-size:18px; line-height:1; }
-        #btn:active{ transform: scale(.98); }
+        #btn:active{ transform:scale(.98); }
 
-        /* =============== Results list (JS fills #results) =============== */
+        /* =========================
+           RESULTS (JS fills #results)
+           ========================= */
         .result{ margin-top:12px; }
         .result ul{ list-style:none; padding:0; margin:12px 0 0; }
         .result li.card{
           display:grid; grid-template-columns:64px 1fr; gap:10px; align-items:center;
           padding:10px 8px;
-          border-radius:var(--radius);
+          border-radius:14px;
           background:#fff;
-          box-shadow:var(--shadow-2);
+          box-shadow:0 1px 0 rgba(0,0,0,.08);
         }
         .result li.card + li.card{ margin-top:10px; }
+
         .thumb{
           width:64px; height:64px; border-radius:10px;
-          object-fit:cover; background:var(--surface-2); display:block;
+          object-fit:cover; background:var(--surface-2);
         }
+
         .meta{ line-height:1.35; font-size:15px; }
-        .meta strong{ display:block; font-weight:900; }
+        .meta strong{
+          display:block; font-weight:900; color:#2b2b2b;
+          font-variant-numeric: tabular-nums;   /* PLUs align nicely */
+          letter-spacing:.1px;
+        }
         .muted, .muted strong{ color:var(--muted); }
 
-        /* =============== Larger phones/tablets =============== */
+        /* Larger phones */
         @media (min-width:420px){
           .appwrap{ padding:16px; }
           .result li.card{ grid-template-columns:72px 1fr; padding:12px; }
           .thumb{ width:72px; height:72px; border-radius:12px; }
         }
 
-        /* =============== Dark mode =============== */
-        @media (prefers-color-scheme:dark){
-          body{ background:#0f0f0f; color:#eaeaea; }
-          .brandbar{ background:#000; }
-          .appcard{ background:#151515; box-shadow:0 10px 26px rgba(0,0,0,.35); }
-          #query{
-            background:#1d1d1d; color:#eee; border-color:#2b2b2b;
-            box-shadow:0 2px 8px rgba(0,0,0,.30);
-          }
-          .result li.card{ background:#1a1a1a; }
-          #btn{ background:#c7e21c; color:#111; } /* lime looks great in dark mode */
-        }
+        /* === Ensure input text is visible on white background === */
+#query{
+  background:#fff !important;
+  color:#111 !important;          /* typed text */
+  caret-color:#111 !important;    /* cursor color */
+  -webkit-text-fill-color:#111;    /* Safari/iOS */
+}
 
-        #btn{ background:#fff; color:#111; border:1.5px solid var(--border); }
+/* Placeholder color (kept readable but muted) */
+#query::placeholder{
+  color: var(--muted) !important;  /* e.g. #707070 */
+  opacity: 1;                      /* some browsers fade it */
+}
+
+/* iOS/Chrome autofill fix: keep white background + dark text */
+#query:-webkit-autofill,
+#query:-webkit-autofill:hover,
+#query:-webkit-autofill:focus{
+  -webkit-text-fill-color:#111 !important;
+  box-shadow: 0 0 0 1000px #fff inset !important; /* force white fill */
+  transition: background-color 9999s ease-out 0s; /* hide yellow flash */
+}
+
+/* If your search icon button should stay white with dark icon */
+#btn{
+  background:#fff !important;
+  color:#111 !important;           /* emoji icon inherits this */
+  border:1.5px solid var(--border) !important;
+}
 
     </style>
 </head>
 
 <body>
 
-<!-- ===== Centered, full-width brand header ===== -->
+<!-- ===== White, centered brand header ===== -->
 <header class="brandbar" role="banner" aria-label="Chalo FreshCo">
     <div class="brandbar__inner">
         <a class="brandbar__logo" href="/" aria-label="Home">
-            <!-- swap to your actual logo file -->
+            <!-- Swap to your actual logo path (relative, not absolute) -->
             <img src="img/plu/download.png" alt="Chalo · FreshCo — PLU Lookup">
         </a>
     </div>
@@ -191,13 +224,23 @@
                        autocapitalize="none"
                        autocomplete="off"
                        aria-describedby="searchHelp" />
-                <button id="btn" type="button" aria-label="Search">Search</button>
+                <!-- Icon-only button (your JS already binds to #btn) -->
+                <button id="btn" type="button" aria-label="Search"></button>
             </div>
         </div>
 
         <!-- Results target (your JS fills this) -->
         <div id="results" class="result" aria-live="polite" aria-busy="false">
             <span id="searchHelp" class="muted">Type an item or a PLU to begin.</span>
+            <!--
+              Your JS will inject:
+              <ul>
+                <li class="card" aria-label="Banana - No Gas - Green">
+                  <img class="thumb" src="img/plu/4011.jpg" alt="Banana - No Gas - Green">
+                  <div class="meta"><strong>4011 – Banana - No Gas - Green</strong></div>
+                </li>
+              </ul>
+            -->
         </div>
     </section>
 </main>
